# CN-HACKATHON

./: .gitignore  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
src/phish_detector/: __init__.py  analyzer.py  batch.py
src/phishing_link_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_analyzer.py  test_batch.py
